feat: Added item increase and decrease for CartItems